-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u45, 8
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8029494 | 8 | Harold Seigel | P3 | Closed | Fixed | b119 |
| JDK-8034508 | 7u65 | Harold Seigel | P3 | Closed | Fixed | b01 |
| JDK-8030338 | 7u60 | Harold Seigel | P3 | Closed | Fixed | b03 |
| JDK-8029337 | hs25 | Harold Seigel | P3 | Closed | Fixed | b61 |
- backported by
-
JDK-8029337 JVM should not throw VerifyError when a private method overrides a final method
-
- Closed
-
-
JDK-8029494 JVM should not throw VerifyError when a private method overrides a final method
-
- Closed
-
-
JDK-8030338 JVM should not throw VerifyError when a private method overrides a final method
-
- Closed
-
-
JDK-8034508 JVM should not throw VerifyError when a private method overrides a final method
-
- Closed
-
- relates to
-
JDK-8028549 Ensure consistent treatment of private/static methods during verification
-
- Closed
-
-
JDK-8027351 (ref) Private finalize method invoked in preference to protected superclass method
-
- Resolved
-