8028520: JVM should not throw VerifyError when a private method overrides a final method

Exclude private methods when checking for final method override.

Reviewed-by: kamg, coleenp, dholmes, mseledtsov